# hello_sfml

./: CMakeLists.txt
src/: main.cpp
